<resources>
    <string-array name="textView_id">

        <item> Hindi_text</item>
        <item> English_text</item>

    </string-array>
    <string name="my_app_id">my_app-cfjpb</string>
    <string-array name="community">
        <item>Select</item>
        <item>General</item>
        <item>OBC</item>
        <item>SC</item>
        <item>ST</item>
    </string-array>
    <string-array name="application_category">
        <item>Select</item>
        <item>Primary Teacher</item>
        <item>GT Art</item>
        <item>GT Science</item>
    </string-array>
    <string-array name="language_choice">
        <item>Select</item>
        <item>Nepali</item>
        <item>Bhutia</item>
        <item>Lepcha</item>
        <item>Limboo</item>
        <item>Hindi</item>
        <item>English</item>
    </string-array>
    <string-array name="language">
        <item>ENGLISH</item>
        <item>हिन्दी</item>
    </string-array>
    <string-array name="min_qualification">
        <item>Select</item>
        <item>XII</item>
        <item>Graduation</item>
    </string-array>
    <string-array name="prof_qualification">
        <item>Select</item>
        <item>D.EI.Ed</item>
        <item>B.Ed</item>
        <item>BA B.Ed</item>
        <item>BSc B.Ed</item>
    </string-array>
    <string-array name="states">
        <item>Select</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu And Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerela</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="app_name" translatable="false">STET</string>
    <string name="select">Select</string>
    <string name="application_no">Application Number</string>
    <string name="enter_application_no">Enter Application Number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="todo">Todo</string>
    <string name="enter_text_shown_in_image">Enter the text shown in the image</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forgot Password</string>
    <string name="forget_application_no">Forgot Application Number</string>
    <string name="homepage_textview1">Sikkim Teacher Eligibility Test-2020</string>
    <string name="homepage_about">About Sikkim TET:</string>
    <string name="homepage_content">Contents:</string>
    <string name="homepage_about_content">Sikkim Teacher Eligibility Test is one of the prestigious teaching examination of the state Sikkim. Each year, several candidates appear for this exam, and only a few candidates are able to qualify the exam.</string>
    <string name="homepage_overview">Overview of Sikkim TET</string>
    <string name="homepage_admitCard">Sikkim TET-2020 Admit Card</string>
    <string name="homepage_admitCard_content">After the process of the application process is over, candidates can download their Sikkim TET admit card 2020. Those candidates who submitted application form in the year 2019 can also download their admit card this time. As per the official notification, candidates are sent an email related to the release of admit card. Candidates get their admit card through the registered email address. Once the official notification of admit card is released, candidates are advised to visit their respective email address.</string>
    <string name="homepage_examPattern">Sikkim TET-2020 Exam Pattern</string>
    <string name="homepage_syllabus">Sikkim TET-2020 Syllabus</string>
    <string name="homepage_prepare">How to prepare for Sikkim TET-2020?</string>
    <string name="homepage_applicationForm">Sikkim TET-2020 Application Form</string>
    <string name="homepage_eligibilityCriteria">Sikkim TET-2020 Eligibility Criteria</string>
    <string name="homepage_timeline">Sikkim TET-2020 Timeline</string>
    <string name="homepage_clickhere">CLICK HERE</string>
    <string name="homepage_apply">To Check Your Profile</string>
    <string name="examPattern">An applicant who intends to participate in both the categories (Primary and Graduate) will have to apply and sit in both the papers separately and pay the fee for both the tests. Both Level I and Level II (i.e. for Primary and Graduate teacher) are conducted on the same day. </string>
    <string name="examPattern_1">Exam Mode:</string>
    <string name="examPattern_2">Online</string>
    <string name="examPattern_3">Exam Type:</string>
    <string name="examPattern_4">Objective type (MCQs)</string>
    <string name="examPattern_5">Total no. of questions:</string>
    <string name="examPattern_6">150</string>
    <string name="examPattern_7">Marking Scheme:</string>
    <string name="examPattern_8">1 mark for each correct answer</string>
    <string name="examPattern_9">Negative Marking:</string>
    <string name="examPattern_10">There will be no negative marking</string>
    <string name="examPattern_11">Exam Duration:</string>
    <string name="examPattern_12">2.30 hours</string>
    <string name="examPattern_13">Exam Time:</string>
    <string name="examPattern_14">10:00 am to 03:30 pm</string>
    <string name="prepare_content1">Sikkim Teacher Eligibility Test is one of the prestigious teaching examination of the state Sikkim. Each year, several candidates appear for this exam, and only a few candidates are able to qualify the exam. It will be helpful for those candidates who are appearing for the exam to refer to the preparation strategies of TET qualified candidates. Customize their strategies as per the requirement and start the preparation of the exam.</string>
    <string name="prepare_content2">Time management during the preparation of STET exam is crucial. It is necessary to manage time between studying and revision. Each section of syllabus must get enough time to practise. Also, it becomes vital to revise topics with previous year papers to keep them fresh in mind.</string>
    <string name="prepare_content3">Along with hard work, smart work is also crucial for the STET preparation. It becomes necessary to identify the important topics for the exam. Practise STET previous year question papers and note down the important topics and frequently asked questions of the exam. Candidates can also start their preparation with these important section and questions.</string>
    <string name="application_form_content1">Before filling the application form, candidates must keep the following things ready:</string>
    <string name="application_form_content2">Receipt of payment</string>
    <string name="application_form_content3">Scanned or digital photograph</string>
    <string name="application_form_content4">Scanned signature of the candidate</string>
    <string name="application_form_content5">Working e-mail and mobile number</string>
    <string name="application_form_content6">Application Fee</string>
    <string name="application_form_content7">Candidates have to pay Rs.400/- as application fee.</string>
    <string name="application_form_content8">Application fee can only be submitted online.</string>
    <string name="eligibility_criteria_content1">Candidates who are fulfilling the Eligibility Criteria set by officials will be able to sit for the Exam, others will be rejected at the time of scrutiny of documents. Here we have mentioned the eligibility criteria for STET Sikkim Exam 2020.</string>
    <string name="eligibility_criteria_content2">12th or its equivalent with a minimum of 50% marks in aggregate for unreserved candidates and 45 % in case of SC, ST, OBC (Central), OBC (State) and passed the final year of 2 years of D. El. Ed . OR</string>
    <string name="eligibility_criteria_content3">12th or its equivalent with a minimum of 50% marks in aggregate for unreserved candidates and 45 % in case of SC, ST, OBC(Central), OBC(State) and passed in the final year of 4 years B. Ed. OR</string>
    <string name="eligibility_criteria_content4">12th or its equivalent with a minimum of 50% marks in aggregate and 45 % in case of SC, ST, OBC (Central), OBC(State) and passed in final year of 2 years Diploma in Education ( Special Education).</string>
    <string name="eligibility_criteria_content5">B.A./B.Sc. with 50% in aggregate marks for unreserved candidates and 45 % in case of SC, ST, OBC(Central), OBC (State). With this, candidates must have passed the final year of 2 years Diploma in Elementary Education (D. El. Ed.). OR</string>
    <string name="eligibility_criteria_content6">B.A./B.Sc. with 50 % marks in aggregate for unreserved candidates and 45 % in case of SC, ST, OBC(Central),OBC(State) and passed in final year of 1/ 2 year Bachelor in Education (B. Ed.). OR</string>
    <string name="eligibility_criteria_content7">12th or its equivalent with a minimum of 50% marks in aggregate for unreserved candidates and 45 % for SC, ST, OBC (Central), OBC (State) and have passed in the final year of 2 years in Diploma in Elementary Education ( D. El. Ed), OR</string>
    <string name="eligibility_criteria_content8">12th or its equivalent with a minimum 0f 50% marks for unreserved category and 45% marks in case of Sc, ST, OBC (Central), OBc (State) and passed or appearing in final year of 04 years B. A.Ed/B.Sc.Ed or B.A/B.Sc.Ed</string>
    <string name="eligibility_criteria_content9">Minimum Educational Qualification for Primary Teacher (Classes I- V: Primary Stage)</string>
    <string name="page_1_login">Login</string>
    <string name="page_1_signup">Sign up</string>
    <string name="page_6_pay">Pay</string>
    <string name="page_6_back">Back</string>
    <string name="page_6_next">Next</string>
    <string name="page_6_payment">Payment</string>
    <string name="sikkim_teacher_eligibility_test_2020">Sikkim Teacher Eligibility Test-2020</string>
    <string name="password_reset">Password:</string>
    <string name="show_password">SHOW PASSWORD</string>
    <string name="edit_password">EDIT PASSWORD</string>
    <string name="new_password">New Password :</string>
    <string name="password_reset_edt">Password</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="password_reset_confirm">Password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_back">BACK</string>
    <string name="phone_no_page_1">Phone No. :</string>
    <string name="phone_no_page_1_hint">Phone No.</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password_bt">Forget Password</string>
    <string name="help">HELP</string>
    <string name="contact_number_987654321">Contact Number : 987654321</string>
    <string name="email_id_stet_gmail_com">Email-id : stet@gmail.com</string>
    <string name="website_stet_co_in">Website : stet.co.in</string>
    <string name="home_menu">HOME</string>
    <string name="status_menu">STATUS</string>
    <string name="help_menu">HELP</string>
    <string name="faqs_menu">FAQs</string>
    <string name="chat_bot_menu">CHAT BOT</string>
    <string name="timeline_menu">TIMELINE</string>
    <string name="logout_menu">LOGOUT</string>
    <string name="admit_card">ADMIT CARD</string>
    <string name="change_language">CHANGE LANGUAGE</string>
</resources>