<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_2"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/admitCard_logo"
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/stet_logo" />
    <TextView
        android:id="@+id/faqs_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_textview1"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@drawable/background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/help"
        android:textColor="@android:color/background_dark"
        android:textSize="30dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/contact_number_987654321"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/email_id_stet_gmail_com"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/website_stet_co_in"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/help_back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_shape"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/reset_back" />
    </LinearLayout>


</LinearLayout>