<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/prepare_logo"
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/stet_logo" />

    <TextView
        android:id="@+id/prepare_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_textview1"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:text="_______________________________________________________________"/>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/background"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/prepare_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homepage_prepare"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/prepare_content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepare_content1"
            android:layout_margin="10dp"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/prepare_content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepare_content2"
            android:layout_margin="10dp"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/prepare_content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepare_content3"
            android:textSize="13sp"
            android:layout_margin="10dp"/>

    </LinearLayout>


</LinearLayout>