<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <ImageView
        android:id="@+id/page_1_image"
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/stet_logo">

    </ImageView>

    <TextView
        android:id="@+id/page_1_text_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/sikkim_teacher_eligibility_test_2020"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="25dp"
            android:textSize="25dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/page_1_phone"
                android:layout_width="80dp"
                android:layout_height="wrap_content"

                android:text="@string/phone_no_page_1"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/page_1_phn_et"
                android:layout_width="175dp"
                android:layout_height="30dp"
                android:background="@drawable/box"
                android:hint="@string/phone_no_page_1_hint"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:textSize="13dp">


            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/page_1_pass"
                android:layout_width="80dp"
                android:layout_height="wrap_content"

                android:text="@string/password"
                android:textSize="14dp"

                android:textStyle="bold" />

            <EditText
                android:id="@+id/page_1_Edtpass"
                android:layout_width="175dp"
                android:layout_height="30dp"
                android:background="@drawable/box"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="13dp">

            </EditText>
        </LinearLayout>

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/remember_me" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/page_1_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="0dp"
                android:background="@drawable/button_shape"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/page_1_login" />

            <Button
                android:id="@+id/page_1_signup"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="93dp"
                android:background="@drawable/button_shape"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/page_1_signup">

            </Button>
        </LinearLayout>
        <Button

            android:id="@+id/page_1_forget"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/forget_password_bt"
            android:textSize="12dp">

        </Button>




    </LinearLayout>


</LinearLayout>